
	* modules/pam_stress/pam_stress.c (pam_sm_chauthtok): Fix
	localisation of message printed to user.
	* po/de.po: Adjust translation.

2006-12-18  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/pam_unix_passwd.c (pam_sm_chauthtok): Localize
	message printed to user.
	
	* modules/pam_unix/support.c (_unix_verify_password): Use strncmp
	only for bigcrypt result.

2006-12-13  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_localuser/pam_localuser.c: Add support for session
	and chauthtok [SF#1606180].
	* modules/pam_localuser/pam_localuser.8.xml: Document last change.

	* libpam/pam_audit.c (_pam_audit_writelog): Print error message
	only once.

2006-12-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/pam_audit.c (_pam_audit_writelog): Print error
	message on failure to syslog.

2006-12-09  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_umask/pam_umask.c: Use strtoul instead of strtol,
	fix overflow detection.

2006-12-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_mkhomedir/pam_mkhomedir.c (rec_mkdir): Fix
	handling of left-most path component [SF#1591598].
	(create_homedir): Mark user visible messages for translation.
	* po/de.po: Adjust german translation for pam_mkhomedir.

	* modules/pam_faildelay/pam_faildelay.c: If no argument is
	given, try to read FAIL_DELAY from /etc/login.defs.
	* modules/pam_faildelay/pam_faildelay.8.xml: Document usage
	of /etc/login.defs.

2006-12-04  Tomas Mraz <t8m@centrun.cz>

	* po/jp.po: Fixed mistake in Password: message (from
	Peng Huang <phuang@redhat.com>).

2006-11-28  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/hu.po: Update hungarian translation (from
	Kalman Kemenczy <kkemenczy@novell.com>).

	* configure.in: Allow disabling support for cracklib, audit, libdb.

	* modules/pam_faildelay/pam_faildelay.8.xml: Correct name of Author.

	* configure.in: Remove --enable-docdir (obsolete by --docdir).
	* doc/Makefile.am: Don't overwrite htmldir.
	* doc/adg/Makefile.am: Use docdir, htmldir and pdfdir.