@@ -19,6 +19,11 @@
 	
 	* modules/pam_unix/support.c (_unix_verify_password): Use strncmp
 	only for bigcrypt result.
+	
+	* modules/pam_keyinit/pam_keyinit.c (kill_keyrings): Switch to new
+	egid first, euid next. Revert euid/egid to old euid/egid and not
+	ruid/rgid.
+	(pam_sm_open_session): Switch to new rgid first, ruid next. 
 
 2006-12-13  Thorsten Kukuk  <kukuk@thkukuk.de>
 
